Fix for the quiz response alignment.

--- a/docroot/themes/eminent_sardar/eminent_sardar.css
+++ b/docroot/themes/eminent_sardar/eminent_sardar.css
@@ -372,3 +372,6 @@ margin-bottom: 10px;
   background: none;
   padding-top: 0px;
 }
+.responses {
+  padding-bottom: 15px;
+}
